# aws-electron

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.web.json  vite.config.ts
.github/workflows/: main.yml
console/: index.html
launcher/: index.html
mfaCache/: index.html
models/: package-lock.json  package.json  vite.config.mts
models/src/: models.mts
src/: App.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: commands.rs  main.rs  menu.rs
src-tauri/src/config/: mod.rs  parser.rs  watcher.rs
src/console/: Console.tsx  main.tsx
src/launcher/: Launcher.css  Launcher.tsx  ProfileEntry.tsx  main.tsx
src/main/: appState.ts  awsConfig.ts  getApplicationVersion.ts  getConsoleURL.ts  index.ts  mainState.ts  menu.ts
src/mfaCache/: MfaCache.tsx  main.tsx
src/preload/: index.d.ts  index.ts
src/renderer/: index.html  launcher.html  mfaCache.html  preferences.html  tabs.html
src/renderer/src/: App.tsx  rendererState.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: MfaBox.tsx  ProfileList.tsx  ProfileRow.tsx
src/renderer/src/windows/: launcher.tsx
src/renderer/src/windows/launcher/: Launcher.tsx  MfaBox.tsx  ProfileAccordion.tsx  ProfileRow.tsx  SsoProfiles.tsx  StandardProfiles.tsx  main.tsx
src/renderer/src/windows/mfaCache/: MfaCache.tsx  ProfileHeader.tsx  ProfileRow.tsx  main.tsx
src/renderer/src/windows/preferences/: Preferences.tsx  WindowTitlePreference.tsx  main.tsx
src/renderer/src/windows/tabs/: Tabs.tsx  main.tsx
webpack/src/main/: consoleWindow.ts
