[package]
name = "aws-console"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
rust-ini = "0.21.0"
derive-new = "0.6.0"
homedir = "0.2.1"
serde_derive = "1.0.197"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
futures = "0.3.30"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
